# composable_kernel

./: CMakeLists.txt  README.md  rebuild_single.sh
driver/: CMakeLists.txt  conv_bwd_data_driver_v2.cpp  conv_driver.cpp  conv_driver_v2.cpp  conv_driver_v2_olc.cpp  device_convolution_implicit_gemm_v4_nchw_kcyx_nkhw.hpp  device_implicit_gemm_convolution_1_chwn_csrk_khwn.hpp  device_implicit_gemm_convolution_2_chwn_cyxk_khwn.hpp  device_winograd_convolution.cuh  driver.hip.cpp
driver/include/: conv_common.hpp  conv_tunables.hpp  device.hpp  device_col2im_eb_nchw.hpp  device_convolution_backward_data_implicit_gemm_v1r1_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v1r2_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v2r1_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v3r1_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v4r1_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v4r1_nhwc_kyxc_nhwk.hpp  device_convolution_backward_data_implicit_gemm_v4r2_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v4r3_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v4r4_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v4r5_nchw_kcyx_nkhw.hpp  device_convolution_backward_data_implicit_gemm_v5r1_nchw_kcyx_nkhw.hpp  device_convolution_bwd_data_implicit_gemm_v1_nchw_kcyx_nkhw.hpp  device_convolution_direct_v2_nchw_kcyx_nkhw.hpp  device_convolution_forward_implicit_gemm_v4r1_nchw_kcyx_nkhw.hpp  device_convolution_forward_implicit_gemm_v4r4_nchw_kcyx_nkhw.hpp  device_convolution_forward_implicit_gemm_v4r4_nhwc_kyxc_nhwk.hpp  device_convolution_forward_implicit_gemm_v4r4_xdlops_nchw_kcyx_nkhw.hpp  device_convolution_implicit_gemm_v1_chwn_cyxk_khwn.hpp  device_convolution_implicit_gemm_v1_nchw_cyxk_nkhw.hpp  device_convolution_implicit_gemm_v2_chwn_cyxk_khwn.hpp  device_convolution_implicit_gemm_v3_nchw_cyxk_nkhw.hpp  device_convolution_implicit_gemm_v4_nchw_kcyx_nkhw.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_deprecated.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_generic_1x1.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_generic_1x1_asm.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_generic_1x1_flat.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_generic_asm.hpp  device_convolution_implicit_gemm_v4r1_nchw_kcyx_nkhw_generic_nkc.hpp  device_convolution_implicit_gemm_v4r2_nchw_kcyx_nkhw.hpp  (+45 more)
script/: run.sh  (+6 more)
(+355 files in other folders)
